debut css page principale

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css"
         integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous">
-    <!--<link href="styles.css/styles.css" rel="stylesheet" type="text/css">-->
+    <link href="styles.css/styles.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
         integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
@@ -27,17 +27,19 @@
         <div id="logo">
             <img src="images/logo/ohmyfood.png">
         </div>
-        <div class="position" aria-placeholder="Paris,Bellevile">
-            <h2> Paris,Bellevile</h2>
-
-        </div>
+       
     </header>
+    <div class="position" aria-placeholder="Paris,Bellevile">
+    <h2> Paris,Bellevile</h2>
 
+</div>
     <section class="proj-description">
-        <h1>Réservez le menu qui vous convient</h1>
-        <p> Découvrez des restauraants d'exception,sélècionnés par nos soins.</p>
+        
 
-        <form><button class="Proj-description__btn" type="button">
+        <h1>Réservez le menu qui vous convient</h1>
+        <p> Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
+
+        <form class="projet-description_btn"><button class="Proj-description__btn" type="button">
                 Explorer nos restaurants
             </button>
         </form>
@@ -60,10 +62,10 @@
     </nav>
 
     <section id="Proj-restaurants">
-        <h1>restauraants</h1>
+        <h1>restaurants</h1>
 
         <div class="Proj-restaurants__Nouveau">
-            <a href="html/palettedugoût.html"> 
+            <a href="html/palette_du_goût.html"> 
                 <div class="Proj-restaurants__image" id="Ménilmontant">
                 <div class="Proj-restaurants__texte">
                     <i class="fa-thin fa-heart"></i>
@@ -80,30 +82,33 @@
 
 
         <div class="Proj-restaurants__Nouveau">
-            <div class="Proj-restaurants__image" id="Charonne">
+           <a href="html/la_note_enchantée.html"><div class="Proj-restaurants__image" id="Charonne">
                 <div class="Proj-restaurants_texte">
                     <i class="fa-thin fa-heart"></i>
                     <h3> La note enchantée</h3>
                     <p>Charonne</p>
                 </div>
             </div>
+           </a>
         </div>
 
-        <div class="Proj-restaurants__image" id="Cité Rouge">
+        <a href="html/a_la_francaise.html" >  <div class="Proj-restaurants__image" id="Cité Rouge">
             <div class="Proj-restaurants__texte">
                 <i class="fa-thin fa-heart"></i>
                 <h3> A la francaise</h3>
                 <p>cité Rouge</p>
             </div>
         </div>
+        </a>
 
-        <div class="Proj-restaurants__image" id="Folie-Méricourt">
+        <a href="html/le_délice_des_sens.html"><div class="Proj-restaurants__image" id="Folie-Méricourt">
             <div class="Proj-restaurants__texte">
                 <i class="fa-thin fa-heart"></i>
-                <h3> La palette du goût</h3>
+                <h3> Le délice des sens</h3>
                 <p>Folie-Méricourt</p>
             </div>
         </div>
+        </a>
     </section>
 
 
@@ -117,7 +122,7 @@
                     <i class="fa-solid fa-handshake-angle"></i>
                     <li><a href=#>Devenir partenaire</a></li>
                     <li><a href=#>Mentions légales</a></li>
-                    <li><a href=#>Contact</a></li>
+                    <li> <a href="html/contact.html">Contact</a></li>
                 </ul>
             </div>
         </div>
