--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div class="Proj-restaurants__texte">
                     
 
-                    <h3> La palette du goût </h3><i class="fas fa-heart"></i>
+                    <h3> La palette du goût </h3><a href="#Proj-restaurants__Nouveau"><i class="fas fa-heart"></i></a>
                     <p>Ménilmontant</p>
 
                 
