initialitation de sass

--- a/le_délice_des_sens.html
+++ b/le_délice_des_sens.html
@@ -8,16 +8,15 @@
     <meta name="viewport" content="width=device-width" />
 
     <script src="https://kit.fontawesome.com/d5f560713f.js" crossorigin="anonymous"></script>
-    <link href="../css/styles_goût.css" rel="stylesheet" type="text/css">
-
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <header class="proj-header">
     <div id="logo">
-        <img src="../images/logo/ohmyfood.png">
+        <img src="./images/logo/ohmyfood.png">
     </div>
     <div class="fleche_retour">
-   <a href="../index.html"> <i class="fa-thin fa-arrow-left"></i></a>
+   <a href="./index.html"> <i class="fa-thin fa-arrow-left"></i></a>
     </div> 
 </header>
 
@@ -78,7 +77,7 @@
            </div>
     </div>
   
-    <form class="projet-description_btn"><button class="Proj-description__btn" type="button">
+    <form class="Proj-commander_btn"><button class="Proj-commander__btn" type="button">
         Commander
     </button>
 </form>
