--- a/palette_du_goût.html
+++ b/palette_du_goût.html
@@ -8,16 +8,15 @@
     <meta name="viewport" content="width=device-width" />
 
     <script src="https://kit.fontawesome.com/d5f560713f.js" crossorigin="anonymous"></script>
-    <link href="../css/styles_goût.css" rel="stylesheet" type="text/css">
-
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 
 <header class="proj-header">
     <div id="logo">
-        <img src="../images/logo/ohmyfood.png">
+        <img src="./images/logo/ohmyfood.png">
     </div>
     <div class="fleche_retour">
-   <a href="../index.html"> <i class="fa-thin fa-arrow-left"></i></a>
+   <a href="./index.html"> <i class="fa-thin fa-arrow-left"></i></a>
     </div> 
 </header>
 
@@ -77,7 +76,7 @@
            </div>
     </div>
   
-    <form class="projet-description_btn"><button class="Proj-description__btn" type="button">
+    <form class="Proj-commander_btn"><button class="Proj-commander__btn" type="button">
         Commander
     </button>
 </form>
@@ -91,7 +90,7 @@
                  <li><i class="fal fa-utensils"></i>    <a href=#>Proposer un restaurant</a></li>
                 <li><i class="fa-solid fa-handshake-angle"></i>    <a href=#>Devenir partenaire</a></li>
                 <li><a href=#>Mentions légales</a></li>
-                <li> <a href="html/contact.html">Contact</a></li>
+                <li> <a href="./contact.html">Contact</a></li>
             </ul>
         </div>
     </div>
