fin page d'accueil

--- a/palette_du_goût.html
+++ b/palette_du_goût.html
@@ -6,8 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=320" />
     <meta name="viewport" content="width=device-width" />
-
-    <script src="https://kit.fontawesome.com/d5f560713f.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/3446686577.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/main.css">
 </head>
 
@@ -34,7 +33,7 @@
     <div class="entrées">
 
        <div class="Menu_texte">
-            <a href="#"><h3> Fricassée d'escargot</h3> <h4>Au piment d'espelette</h4> <p> 25€</p></a>
+            <a href="#"><h3> Fricassée d'escargot</h3> <h4>Au piment d'espelette</h4> <p> 25€</p><i class="fa-solid fa-circle-check"></i></a>
        </div>
 
        <div class="Menu_texte">
@@ -42,7 +41,7 @@
        </div>
 
        <div class="Menu_texte">
-        <a href="#"><h3>Oeuf au plat</h3> <h4> Assaisonné à la truffe sur lit de caviar</h4> <p>20€</p></a>
+        <a href="#"><h3>Oeuf au plat</h3> <h4 class="overflow"> Assaisonné à la truffe sur lit de caviar</h4> <p>20€</p></a>
        </div>
     </div>
        <div class="plats">
