--- a/a_la_francaise.html
+++ b/a_la_francaise.html
@@ -6,9 +6,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=320" />
     <meta name="viewport" content="width=device-width" />
-
-    <script src="https://kit.fontawesome.com/d5f560713f.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./css/styles.css">
+    <script src="https://kit.fontawesome.com/3446686577.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./css/main.css">
 
 </head>
 
