--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
         <H1>Fonctionnement</H1>
 
         <button class="Proj-fonctionnement__btn" type="Button">
-            <i class="fa-light fa-circle-1"></i> <i class="fa-regular fa-circle-1"></i> <i class="fa-solid fa-circle-1"></i><i class="fa-duotone fa-circle-1"></i> <i class="fa-solid fa-mobile-screen-button"></i>
-                 <p>Choisissez un restaurant</p>
+            <i class="fas fa-circle"></i> <i class="fa-solid fa-1"></i><i class="fa-solid fa-mobile-screen-button"></i> 
+              <p>Choisissez un restaurant</p>
         </button>
 
         <button class="Proj-fonctionnement__btn" type="Button">
-            <i class="fa-solid fa-circle-2"></i><i class="fa-solid fa-ellipsis-vertical"></i>  <i class="fa-solid fa-bars"></i> <p> Composez votre menu </p> 
+            <i class="fas fa-circle"></i> <i class="fa-solid fa-2"></i><i class="fa-solid fa-ellipsis-vertical"></i>  <i class="fa-solid fa-bars"></i> <p> Composez votre menu </p> 
         </button>
 
         <button class="Proj-fonctionnement__btn" type="Button">
-            <i class="fa-solid fa-circle-3"></i> <i class="fa-solid fa-store"></i> <p>Dégustez au restaurant</p>
+            <i class="fas fa-circle"></i> <i class="fa-solid fa-3"></i><i class="fa-solid fa-store"></i> <p>Dégustez au restaurant</p>
         </button>
     </nav>
 
