--- a/a_la_francaise.html
+++ b/a_la_francaise.html
@@ -35,45 +35,45 @@
     <div class="entrées">
 
        <div class="Menu_texte">
-            <a href="#"><h3>Tartare de poulpe acidulé</h3> <h4>Aux zestes d'orange</h4> <p> 25€</p></a>
+            <a href="#"><h3>Tartare de poulpe acidulé</h3> <h4>Aux zestes d'orange</h4> <p> 25€</p><i class="fa-solid fa-circle-check"></i></a>
        </div>
 
        <div class="Menu_texte">
-        <a href="#"><h3>Velouté de légumes d'antan </h3> <h4>Carotte, panais, topinambour</h4> <p>35€</p></a>
+        <a href="#"><h3>Velouté de légumes d'antan </h3> <h4>Carotte, panais, topinambour</h4> <p>35€</p><i class="fa-solid fa-circle-check"></i></a>
        </div>
 
        <div class="Menu_texte">
-        <a href="#"><h3>Soupe à l'oignon</h3> <h4>Revisitée</h4> <p>20€</p></a>
+        <a href="#"><h3>Soupe à l'oignon</h3> <h4>Revisitée</h4> <p>20€</p><i class="fa-solid fa-circle-check"></i></a>
        </div>
     </div>
        <div class="plats">
            <h5>PLATS</h5>
 
            <div class="Menu_texte">
-            <a href="#"><h3> Coquilles Saint-Jacques</h3> <h4>Accompagnées d'une purée de panais</h4> <p> 40€</p></a>
+            <a href="#"><h3> Coquilles Saint-Jacques</h3> <h4>Accompagnées d'une purée de panais</h4> <p> 40€</p><i class="fa-solid fa-circle-check"></i></a>
            </div>
 
            <div class="Menu_texte">
-            <a href="#"><h3>Magret de canard</h3> <h4> Et parmentier de pommes de terre</h4> <p> 35€</p></a>
+            <a href="#"><h3>Magret de canard</h3> <h4> Et parmentier de pommes de terre</h4> <p> 35€</p><i class="fa-solid fa-circle-check"></i></a>
            </div>
           
            <div class="Menu_texte">
-            <a href="#"><h3> Pigeonneau d’Ille-et-Vilaine</h3> <h4>Sur son lit de gnocchis aux légumes<h4> <p> 44€</p></a>
+            <a href="#"><h3> Pigeonneau d’Ille-et-Vilaine</h3> <h4>Sur son lit de gnocchis aux légumes<h4> <p> 44€</p><i class="fa-solid fa-circle-check"></i></a>
            </div>
     </div>
 
     <div class="DESSERTS">
     <h5>DESSERTS</h5>
         <div class="Menu_texte">
-            <a href="#"><h3>Pétales de violettes glacés</h3> <h4>Et purée de noisettes</h4> <p> 18€</p></a>
+            <a href="#"><h3>Pétales de violettes glacés</h3> <h4>Et purée de noisettes</h4> <p> 18€</p><i class="fa-solid fa-circle-check"></i></a>
            </div>
 
            <div class="Menu_texte">
-            <a href="#"><h3> Fondant au chocolat</h3> <h4>Revisité</h4> <p>22€</p></a>
+            <a href="#"><h3> Fondant au chocolat</h3> <h4>Revisité</h4> <p>22€</p><i class="fa-solid fa-circle-check"></i></a>
            </div>
           
            <div class="Menu_texte">
-            <a href="#"><h3>Millefeuille croustillant </h3> <h4>Myrtilles et pâte d’amande</h4> <p>23€</p></a>
+            <a href="#"><h3>Millefeuille croustillant </h3> <h4>Myrtilles et pâte d’amande</h4> <p>23€</p><i class="fa-solid fa-circle-check"></i></a>
            </div>
     </div>
   
