--- a/le_délice_des_sens.html
+++ b/le_délice_des_sens.html
@@ -34,45 +34,45 @@
     <div class="entrées">
 
        <div class="Menu_texte">
-            <a href="#"><h3>Tartare de thon</h3> <h4>Assaisonné au yuzu</4> <p> 25€</p></a>
+            <a href="#"><h3>Tartare de thon</h3> <h4>Assaisonné au yuzu</h4> <p> 25€</p><i class="fa-solid fa-circle-check"></i></a>
        </div>
 
        <div class="Menu_texte">
-        <a href="#"><h3> Bouchée de homard croustillant </h3> <h4>Et sa farandole de petits légumes</h4> <p>35€</p></a>
+        <a href="#"><h3> Bouchée de homard croustillant </h3> <h4>Et sa farandole de petits légumes</h4> <p>35€</p><i class="fa-solid fa-circle-check"></i></a>
        </div>
 
        <div class="Menu_texte">
-        <a href="#"><h3>Velouté de cèpes </h3> <h4>Aux truffes</h4> <p>20€</p></a>
+        <a href="#"><h3>Velouté de cèpes </h3> <h4>Aux truffes</h4> <p>20€</p><i class="fa-solid fa-circle-check"></i></a>
        </div>
     </div>
        <div class="plats">
            <h5>PLATS</h5>
 
            <div class="Menu_texte">
-            <a href="#"><h3> Poulet rôti aux herbes de Provence </h3> <h4>Et sa crème de truffe</h4> <p> 40€</p></a>
+            <a href="#"><h3> Poulet rôti aux herbes de Provence </h3> <h4>Et sa crème de truffe</h4> <p> 40€</p><i class="fa-solid fa-circle-check"></i></a>
            </div>
 
            <div class="Menu_texte">
-            <a href="#"><h3>Langouste rôtie </h3> <h4>Et ses légumes de saison</h4> <p> 35€</p></a>
+            <a href="#"><h3>Langouste rôtie </h3> <h4>Et ses légumes de saison</h4> <p> 35€</p><i class="fa-solid fa-circle-check"></i></a>
            </div>
           
            <div class="Menu_texte">
-            <a href="#"><h3>Côte de boeuf Angus </h3> <h4>Et sa purée de panais<h4> <p> 44€</p></a>
+            <a href="#"><h3>Côte de boeuf Angus </h3> <h4>Et sa purée de panais<h4> <p> 44€</p><i class="fa-solid fa-circle-check"></i></a>
            </div>
     </div>
 
     <div class="DESSERTS">
     <h5>DESSERTS</h5>
         <div class="Menu_texte">
-            <a href="#"><h3>Farandole de desserts</h3> <h4>Du chef</h4> <p> 18€</p></a>
+            <a href="#"><h3>Farandole de desserts</h3> <h4>Du chef</h4> <p> 18€</p><i class="fa-solid fa-circle-check"></i></a>
            </div>
 
            <div class="Menu_texte">
-            <a href="#"><h3> Crème brulée </h3> <h4>Revisitée</h4> <p>22€</p></a>
+            <a href="#"><h3> Crème brulée </h3> <h4>Revisitée</h4> <p>22€</p><i class="fa-solid fa-circle-check"></i></a>
            </div>
           
            <div class="Menu_texte">
-            <a href="#"><h3>Tiramisu </h3> <h4>À la noisette</h4> <p>23€</p></a>
+            <a href="#"><h3>Tiramisu </h3> <h4>À la noisette</h4> <p>23€</p><i class="fa-solid fa-circle-check"></i></a>
            </div>
     </div>
   
