--- a/palette_du_goût.html
+++ b/palette_du_goût.html
@@ -37,41 +37,41 @@
        </div>
 
        <div class="Menu_texte">
-        <a href="#"><h3>Foie gras de canard mi-cuit</h3> <h4> Et ses copeaux de truffe noire</h4> <p>35€</p></a>
+        <a href="#"><h3>Foie gras de canard mi-cuit</h3> <h4> Et ses copeaux de truffe noire</h4> <p>35€</p><i class="fa-solid fa-circle-check"></i></a>
        </div>
 
        <div class="Menu_texte">
-        <a href="#"><h3>Oeuf au plat</h3> <h4 class="overflow"> Assaisonné à la truffe sur lit de caviar</h4> <p>20€</p></a>
+        <a href="#"><h3>Oeuf au plat</h3> <h4 class="overflow"> Assaisonné à la truffe sur lit de caviar</h4> <p>20€</p><i class="fa-solid fa-circle-check"></i></a>
        </div>
     </div>
        <div class="plats">
            <h5>PLATS</h5>
 
            <div class="Menu_texte">
-            <a href="#"><h3> Filet de boeuf aux herbes</h3> <h4>Accompagné de sa ribambelle de légu...</h4> <p> 40€</p></a>
+            <a href="#"><h3> Filet de boeuf aux herbes</h3> <h4>Accompagné de sa ribambelle de légu...</h4> <p> 40€</p><i class="fa-solid fa-circle-check"></i></a>
            </div>
 
            <div class="Menu_texte">
-            <a href="#"><h3> Parmentier de queue de boeuf</h3> <h4>À la truffe noire sur sa purée de panais</h4> <p> 35€</p></a>
+            <a href="#"><h3> Parmentier de queue de boeuf</h3> <h4>À la truffe noire sur sa purée de panais</h4> <p> 35€</p><i class="fa-solid fa-circle-check"></i></a>
            </div>
           
            <div class="Menu_texte">
-            <a href="#"><h3> Filet de Turbot</h3> <h4>Aux agrumes .</h4> <p> 44€</p></a>
+            <a href="#"><h3> Filet de Turbot</h3> <h4>Aux agrumes .</h4> <p> 44€</p><i class="fa-solid fa-circle-check"></i></a>
            </div>
     </div>
 
     <div class="DESSERTS">
     <h5>DESSERTS</h5>
         <div class="Menu_texte">
-            <a href="#"><h3> Paris-Brest</h3> <h4>Revisité</h4> <p> 18€</p></a>
+            <a href="#"><h3> Paris-Brest</h3> <h4>Revisité</h4> <p> 18€</p><i class="fa-solid fa-circle-check"></i></a>
            </div>
 
            <div class="Menu_texte">
-            <a href="#"><h3> Macaron au chocolat d'exception </h3> <h4>Et glace à la vanille de Madagascar</h4> <p>22€</p></a>
+            <a href="#"><h3> Macaron au chocolat d'exception </h3> <h4>Et glace à la vanille de Madagascar</h4> <p>22€</p><i class="fa-solid fa-circle-check"></i></a>
            </div>
           
            <div class="Menu_texte">
-            <a href="#"><h3>Mousse au chocolat </h3> <h4>Au piment d'Espelette et à la truffe noire</h4> <p>23€</p></a>
+            <a href="#"><h3>Mousse au chocolat </h3> <h4>Au piment d'Espelette et à la truffe noire</h4> <p>23€</p><i class="fa-solid fa-circle-check"></i></a>
            </div>
     </div>
   
