--- a/le_délice_des_sens.html
+++ b/le_délice_des_sens.html
@@ -27,6 +27,7 @@
     </div>
 </section>
 
+<main>
 <section class="Menu">
     
     <h5>ENTRÉES</h5>
@@ -57,7 +58,7 @@
            </div>
           
            <div class="Menu_texte">
-            <a href="#"><h3>Côte de boeuf Angus </h3> <h4>Et sa purée de panais<h4> <p> 44€</p><i class="fa-solid fa-circle-check"></i></a>
+            <a href="#"><h3>Côte de boeuf Angus </h3> <h4>Et sa purée de panais</h4> <p> 44€</p><i class="fa-solid fa-circle-check"></i></a>
            </div>
     </div>
 
@@ -76,12 +77,11 @@
            </div>
     </div>
   
-    <form class="Proj-commander_btn"><button class="Proj-commander__btn" type="button">
+    <button class="Proj-commander__btn" type="button">
         Commander
     </button>
-</form>
 </section>
-
+</main>
 <footer class="fondnoir">
     <div class="foot">
         <div>
