--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
 
 
 <body>
-    <div class="loading__page">
-      <div class="loader">
-       <div></div>
-       <div></div>    
-     </div>
+    
+      <div id="loader">
+          <div class="spinner"></div>
       </div>
+      
     <header class="proj-header">
         <div id="logo">
             <img src="./images/logo/ohmyfood.png">
