--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                      <li><i class="fal fa-utensils"></i>    <a href=#>Proposer un restaurant</a></li>
                     <li><i class="fa-solid fa-handshake-angle"></i>    <a href=#>Devenir partenaire</a></li>
                     <li><a href=#>Mentions légales</a></li>
-                    <li> <a href="./contact.html">Contact</a></li> 
+                    <li> <a href="mailto::noreply@1formatik.com?subject=Titre&body=Exemple">contact</a> </li> 
                 </ul>
             </div>
         </div>
